Thu Jan  2 16:07:21 2014  Masaki Matsushita  <glass.saga@gmail.com>

	* io.c (io_fwrite): freeze converted str.

Thu Jan  2 04:15:13 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_longjmp): remove an extra modifier from the forward
	  declaration to match the actual definition.  [ruby-core:59451]
	  [Bug #9338]

Thu Jan  2 01:23:30 2014  Masaki Matsushita  <glass.saga@gmail.com>

	* vm_eval.c (method_missing): use ALLOCV_N() instead of
	  ALLOCA_N() and rb_ary_tmp_new().

Thu Jan  2 00:53:16 2014  Masaki Matsushita  <glass.saga@gmail.com>

	* array.c (rb_ary_zip): use ALLOCV_N() instead of ALLOCA_N().

Thu Jan  2 00:04:29 2014  Masaki Matsushita  <glass.saga@gmail.com>

	* hash.c (rb_hash_keys): make rb_hash_keys() static.
	  it is no longer used from array.c since r43969.
	  the patch is from normalperson (Eric Wong).
	  [ruby-core:59449] [Feature #9336]

	* internal.h: remove definition of rb_hash_keys().

Wed Jan  1 18:19:35 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: reset LDFLAGS and DLDFLAGS for opt-dir again after
	  LIBPATHFLAG and RPATHFLAG are set.  [ruby-dev:47868] [Bug #9317]

Wed Jan  1 11:12:29 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: use SSE2 instructions for drop unexpected
	  precisions.  [ruby-core:54738] [Bug #8358]

Tue Dec 31 23:49:07 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_f_raise): add cause: optional keyword argument.
	  [ruby-core:58610] [Feature #8257] [EXPERIMENTAL]

Tue Dec 31 21:44:17 2013  Akio Tajima <artonx@yahoo.co.jp>

	* win32/Makefile.sub: remove HAVE_FSEEKO because fseeko removed from win32/win32.c
	  Fixed [Bug #9333].

Tue Dec 31 21:02:27 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* io.c (io_fwrite): allocate frozen str only when str is not converted.

Tue Dec 31 15:44:48 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (RbConfig): expand RUBY_SO_NAME for extensions
	  backward compatibility.  [ruby-core:59426] [Bug #9329]
