@@ -16,8 +16,8 @@ require "bigdecimal/ludcmp"
 
 #
 # NOTE:
-#   Change following BigDecimal::limit() if needed.
-BigDecimal::limit(100)
+#   Change following BigDecimal.limit() if needed.
+BigDecimal.limit(100)
 #
 
 include LUSolve
@@ -27,8 +27,8 @@ def rd_order(na)
 end
 
 na   = ARGV.size
-zero = BigDecimal::new("0.0")
-one  = BigDecimal::new("1.0")
+zero = BigDecimal.new("0.0")
+one  = BigDecimal.new("1.0")
 
 while (n=rd_order(na))>0
   a = []
@@ -40,10 +40,10 @@ while (n=rd_order(na))>0
      for i in 0...n do
        for j in 0...n do
          printf("A[%d,%d]? ",i,j); s = ARGF.gets
-         a  << BigDecimal::new(s);
-         as << BigDecimal::new(s);
+         a  << BigDecimal.new(s);
+         as << BigDecimal.new(s);
        end
-       printf("Contatant vector element b[%d] ? ",i); b << BigDecimal::new(ARGF.gets);
+       printf("Contatant vector element b[%d] ? ",i); b << BigDecimal.new(ARGF.gets);
      end
   else
      # Read data from specified file.
@@ -53,10 +53,10 @@ while (n=rd_order(na))>0
        printf("%d) %s",i,s)
        s = s.split
        for j in 0...n do
-         a  << BigDecimal::new(s[j]);
-         as << BigDecimal::new(s[j]);
+         a  << BigDecimal.new(s[j]);
+         as << BigDecimal.new(s[j]);
        end
-       b << BigDecimal::new(s[n]);
+       b << BigDecimal.new(s[n]);
      end
   end
   x = lusolve(a,b,ludecomp(a,n,zero,one),zero)
